Blender window does not open to full dimensions of the desktop #108643

Closed
opened 2023-06-06 05:04:37 +02:00 by Jesse Yurkovich · 10 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-06 00:30, hash: bdd189f593ac
Worked: (newest version of Blender that worked as expected)

Caused by: ebb5643e59

Short description of error
Opening Blender typically results in the window filling up the entire desktop screen. This now does not occur.

Exact steps for others to reproduce the error

  • On Windows, try opening the latest 4.0 build
  • With a 1920x1200 screen, Blender opens to a 1920x1080 window
  • With a 3840x2160 screen, with the OS UI scale set to 200%, Blender opens to a size of 1/4 of the screen

This occurs with and without --factory-startup

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-06 00:30, hash: `bdd189f593ac` Worked: (newest version of Blender that worked as expected) Caused by: ebb5643e598a17b2f21b4e50acac35afe82dbd55 **Short description of error** Opening Blender typically results in the window filling up the entire desktop screen. This now does not occur. **Exact steps for others to reproduce the error** - On Windows, try opening the latest 4.0 build - With a 1920x1200 screen, Blender opens to a 1920x1080 window - With a 3840x2160 screen, with the OS UI scale set to 200%, Blender opens to a size of 1/4 of the screen This occurs with and without `--factory-startup`
Jesse Yurkovich added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-06-06 05:04:37 +02:00
Member

@deadpin If OS UI scale is at 100%, does it still happen?

@mont29 might want to take a look

@deadpin If OS UI scale is at 100%, does it still happen? @mont29 might want to take a look
Author
Member

Yeah, on the 4k screen, a 100% OS UI scale still results in a window only 1/4 the size of the screen.

Yeah, on the 4k screen, a 100% OS UI scale still results in a window only 1/4 the size of the screen.
Member

On linux here it seems to find a screen with biggest size and pop open the window there. Not sure if it's the same logic on windows, but maybe if you switch the "main display" to that 3840 one (or the 1920 one) it will work?

On linux here it seems to find a screen with biggest size and pop open the window there. Not sure if it's the same logic on windows, but maybe if you switch the "main display" to that 3840 one (or the 1920 one) it will work?
Author
Member

I tested on 2 different devices with each having just 1 screen. So no dual-monitor right now for me.

I tested on 2 different devices with each having just 1 screen. So no dual-monitor right now for me.

Pfffff, took me the whole morning to get a build on a windows machine here and check (cannot use WMs when one actually need a UI and OpenGL :( ), to realize that... this actually looks like another (non-identified) bug-fix from ebb5643e59.

Would like to summon @ideasman42 for confirmation, but afaict current behavior is actually the correct one: the default startup file UI is read as it was saved, i.e. if you save startup as full-screen, Blender opens as full screen, if you save it as smaller window, Blender open as that smaller window again.

Note that factory settings are set to 800*600 iirc.

Pfffff, took me the whole morning to get a build on a windows machine here and check (cannot use WMs when one actually need a UI and OpenGL :( ), to realize that... this actually looks like another (non-identified) bug-fix from ebb5643e59. Would like to summon @ideasman42 for confirmation, but afaict current behavior is actually the correct one: the default startup file UI is read as it was saved, i.e. if you save startup as full-screen, Blender opens as full screen, if you save it as smaller window, Blender open as that smaller window again. Note that factory settings are set to 800*600 iirc.

Can we keep this as a feature? I would prefer to set a specific window size myself via the startup file, instead of always opening in full-screen.

Can we keep this as a feature? I would prefer to set a specific window size myself via the startup file, instead of always opening in full-screen.
Author
Member

@slowburn That already works both before and after the change in question so it doesn't seem like that behavior has been changed; at least for what I tried here.

@slowburn That already works both before and after the change in question so it doesn't seem like that behavior has been changed; at least for what I tried here.

Maybe this is related, but recently on Linux Gnome Wayland it actually starts at 19201080(+window title bar) on a 19201080 screen.

This causes the bottom of the window to be out of frame by the height of the title bar and the top action bar.

Is this related or should I open a new Bug report?

Maybe this is related, but recently on Linux Gnome Wayland it actually starts at 1920*1080(+window title bar) on a 1920*1080 screen. This causes the bottom of the window to be out of frame by the height of the title bar and the top action bar. Is this related or should I open a new Bug report?

Blender is meant to use the saved window size, clamped by the screen size.

However there should be different behavior for startup files, certainly the factory startup *, in this case:

  • WMInitStruct (wm_init_state) stores the initial startup.
  • If the user passes in --window-geometry those values are used.
  • Otherwise wm_init_state.size_* are set based on the "screen" size (see calls to wm_get_screensize).
  • When initializing windows, a wmWindow::size_x of zero causes sizes in wm_init_state.size_* to be used for the new window.

It seems likely the window size was previously set to zero at some point while loading the startup so that the "screen" size would be used, where as now the size is not reset. See wm_window_ghostwindow_ensure the screen-size for the window size as a fall-back when win->sizex is zero.


* I can't recall exact rules here (factory-startup, user-startup), however following 3.6x and earlier seems reasonable.

Blender is meant to use the saved window size, clamped by the screen size. However there should be different behavior for startup files, certainly the factory startup \*, in this case: - WMInitStruct (wm_init_state) stores the initial startup. - If the user passes in `--window-geometry` those values are used. - Otherwise `wm_init_state.size_*` are set based on the "screen" size (see calls to `wm_get_screensize`). - When initializing windows, a `wmWindow::size_x` of zero causes sizes in `wm_init_state.size_*` to be used for the new window. It seems likely the window size was previously set to zero at some point while loading the startup so that the "screen" size would be used, where as now the size is not reset. See `wm_window_ghostwindow_ensure` the screen-size for the window size as a fall-back when `win->sizex` is zero. ---- \* I can't recall exact rules here (factory-startup, user-startup), however following 3.6x and earlier seems reasonable.

@ideasman42 thanks for the explanations, made it easy to find the culprit, fix incoming.

@ideasman42 thanks for the explanations, made it easy to find the culprit, fix incoming.
Blender Bot added
Status
Resolved
and removed
Status
Needs Triage
labels 2023-06-07 20:04:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108643
No description provided.